apply wrapping tweaks of centre-container (from previous commit) to pretty much everywhere (:root in global.css, clearly distinguished and with !important markers), fix panel-box elements (like the one in PanelBox.svelte) like the centre-container elements where they had a max-width in px which caused issues with scaling on smaller displays (i.e. too big for screen, being cut off at edges of display)

--- a/web/static/global.css
+++ b/web/static/global.css
@@ -32,6 +32,13 @@
   --column-margin-top: 4rem;
   font-family: var(--font-body);
   color: var(--color-text);
+
+  /* ensure 'ruthless' wrapping to maximise mobile compatibility */
+  flex-wrap: wrap !important;
+  word-wrap: break-word !important;
+  text-wrap: wrap !important;
+  text-wrap-mode: wrap !important;
+  overflow-wrap: anywhere !important;
 }
 
 html {
